test/tests/stages/17_supporting_dynamic_memory_allocation/valid/void/cast_to_void.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: x
        None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: set_x
        List[1]: 
          TIdentifier: i
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: do_nothing
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CNull: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CS: 
              CExpression: 
                CCast: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  Void: 
                  None: 
            CS: 
              CExpression: 
                CCast: 
                  CFunctionCall: 
                    TIdentifier: set_x
                    List[1]: 
                      CConstant: 
                        CConstInt: 
                          TInt: 12
                        None: 
                    None: 
                  Void: 
                  None: 
            CS: 
              CExpression: 
                CCast: 
                  CFunctionCall: 
                    TIdentifier: do_nothing
                    List[0]: 
                    None: 
                  Void: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: x
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
